--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -3,14 +3,16 @@
     <item>
         <shape>
             <corners
-                android:radius="20dp"/>
+                android:radius="10dp"/>
             <padding
                 android:left="10dp"
                 android:right="10dp"
                 android:top="10dp"
                 android:bottom="10dp"/>
             <stroke
-                android:color="#14B61A"/>
+                android:color="#00FFFFFF"/>
+            <solid
+                android:color="#F7F3D8"/>
         </shape>
     </item>
 </selector>
