--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -12,7 +12,7 @@
             <stroke
                 android:color="#00FFFFFF"/>
             <solid
-                android:color="#F7F3D8"/>
+                android:color="#E2EFEC"/>
         </shape>
     </item>
 </selector>
